--- a/xOrdineServizio/My Project/Resources.resx
+++ b/xOrdineServizio/My Project/Resources.resx
@@ -118,9 +118,6 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="reportOP85" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\reportOP85.rpt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
   <data name="printOP85_disabilitato" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnReport\printOP85_disabilitato.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -129,6 +126,9 @@
   </data>
   <data name="pulsanteSoleGrigio" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPIO\pulsanteSoleGrigio.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_finale" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_finale.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="sagomaOFF" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPIO\sagomaOFF.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -142,11 +142,14 @@
   <data name="DBFind" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnPrima\DBFind.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="db_addBlu" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPrima\db_addBlu.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="printOP85" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnReport\printOP85.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="pulsanteSoleVerde" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnPIO\pulsanteSoleVerde.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="printAllegatoA" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnReport\printAllegatoA.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="reportAllegatoA1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reportAllegatoA.vb;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
@@ -160,25 +163,25 @@
   <data name="PDF" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\btnReport\PDF.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="db_addBlu" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnPrima\db_addBlu.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="reportOP85" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\reportOP85.rpt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="pulsanteSoleVerde" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPIO\pulsanteSoleVerde.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="reportInterventi1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reportInterventi.vb;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="repubblica" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\repubblica.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="reportInterventi" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reportInterventi.rpt;System.Byte[], mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="printAllegatoA" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\btnReport\printAllegatoA.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="reportOP851" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\reportOP85.vb;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
-  <data name="logo_finale" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\logo_finale.jpg;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="repubblica" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\repubblica.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="rubricaPng" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\btnPrima\rubrica.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
